# ExoSystems

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  agent.md  input-leap-server.conf
cmc/: README.md  pubspec.yaml
cmc/lib/: main.dart
cmc/web/: index.html
conscia/: Cargo.toml  README.md  conscia.service
conscia/npm/: install.js  package.json
conscia/src/: main.rs
conscia_flutter/: README.md  pubspec.yaml
conscia_flutter/lib/: main.dart
conscia_flutter/linux/: CMakeLists.txt
conscia_flutter/test/: widget_test.dart
conscia_flutter/web/: index.html  manifest.json
conscia_flutter/windows/: CMakeLists.txt
conscia_lite/: README.md  pubspec.yaml
conscia_lite/linux/: CMakeLists.txt
conscia_lite/test/: widget_test.dart
conscia_lite/web/: index.html  manifest.json
conscia_lite/windows/: CMakeLists.txt
conscia_web/: README.md  pubspec.yaml
conscia_web/linux/: CMakeLists.txt
conscia_web/test/: widget_test.dart
conscia_web/web/: index.html  manifest.json
conscia_web/windows/: CMakeLists.txt
debian/: templates
docs/: README.md  ai_landscape_strategy.md  blueprint.md  conscia_ops_guide.md  exosystem-standards.md  exotalk-guidelines.md  glossary.md  improvement_notes.md  license.md  spec.md  vision.md
docs/plans/: conscia_citizenship_extraction.md  exonomy_pgedge_cluster.md  upcoming_milestones_and_fhs.md
docs/releases/: fhs_installer_specification.md
docs/reports/: conscia_technical_infrastructure_report.md
docs/scenarios/: sovereign_saga.md  the_saga.md
docs/spec/: 00_overview.md  01_system_architecture.md  02_identity_and_access.md  03_peer_to_peer_networking.md  04_data_synchronization.md  05_metrics_and_aggregation.md  06_high_availability.md  07_ui_functionality.md  08_runtime.md  09_networking_details.md  10_identity_vault.md  11_meadowcap_capabilities.md  12_frb_api.md  13_build_infrastructure.md  14_traffic_control.md  15_internationalization.md  16_mesh_delivery_guarantees.md  17_solid_front_door_standard.md  18_identity_lifecycle_events.md  19_verification_telemetry_api.md  20_distribution_control_panel.md  21_distribution_and_acquisition_strategy.md  22_application_triad_architecture.md  23_exonomy_topology.md  24_exocracy_topology.md  25_republet_topology.md  26_copy_fail_remediation.md  27_storage_infrastructure_matrix.md  28_management_evolution.md  28_sovereign_management_evolution.md  29_kdvv_remote_control_protocol.md  30_agentic_sdlc_architecture.md  30_emergency_manual_operation.md  31_bmad_agile_methodology.md  32_archon_workflow_standard.md  33_baml_type_safety_protocol.md  34_github_projects_governance.md  35_observability_and_memory_vault.md  36_exonomy_deployment_standard.md  37_infrastructure_persistence.md  (+16 more)
docs/ui/: bridge.md
docs/walkthroughs/: 00_migration_legacy_summary.md  01_ui_stability_and_state.md  02_rebranding_to_exotalk.md  03_decentralized_identity.md  04_walkthrough_consolidation.md  05_centralizing_documentation.md  06_compact_identity_proofs.md  07_meadowcap_governance.md  08_granular_traffic_control.md  09_documentation_overhaul.md  10_monorepo_evolution_and_engine_decoupling.md  11_strict_app_isolation_and_modular_schemas.md  12_sveltekit_migration.md  13_network_telemetry_and_scaling.md  (+70 more)
exo-installer/: Cargo.toml
exo-installer/debian/: config  control  postinst  rules
exo-installer/src/: config.rs  executor.rs  health.rs  main.rs  wizard.rs
exo-installer/templates/: consoul.desktop  exo-conscia.service  exo-logrotate.conf  exo-zrok.service
exoauth/: README.md  flutter_rust_bridge.yaml  pubspec.yaml
exoauth/rust/: Cargo.toml
exoauth/rust/src/: frb_generated.rs
exoauth/rust/src/api/: identity.rs
exocracy_desktop/: Cargo.toml
exocracy_flutter/: README.md
exocracy_lite/: README.md  pubspec.yaml
exocracy_web/: README.md
exonomy_flutter/: README.md  pubspec.yaml
exonomy_lite/: README.md
exonomy_web/: README.md
exotalk_engine/: Cargo.toml  README.md  cc.txt
exotalk_engine/.cargo/: config.toml
exotalk_engine/assets/: index.html
exotalk_engine/conscia/: Cargo.toml  README.md  conscia.service
exotalk_engine/conscia/npm/: package.json
exotalk_engine/conscia/src/: main.rs
exotalk_engine/exocracy_ffi/: Cargo.toml
exotalk_engine/exocracy_schema/: Cargo.toml
exotalk_engine/exonomy_ffi/: Cargo.toml
exotalk_engine/exonomy_schema/: Cargo.toml
exotalk_engine/exotalk_core/: Cargo.toml
exotalk_engine/exotalk_core/exotalk_storage/profiles/did_peer_exocracy_verify/blobs/: blobs.db
exotalk_engine/exotalk_core/src/: lib.rs  network_internal.rs  protocol_internal.rs  test_compile.rs
exotalk_engine/exotalk_ffi/: Cargo.toml
exotalk_engine/exotalk_ffi/src/: frb_generated.rs
exotalk_engine/exotalk_ffi/src/api/: messaging.rs  mod.rs  network.rs  simple.rs  telemetry_server.rs  willow.rs
exotalk_engine/exotalk_schema/: Cargo.toml
exotalk_engine/exotalk_storage/: blobs.db
exotalk_engine/exotalk_storage/profiles/did_peer_conscia_beacon/blobs/: blobs.db
exotalk_engine/exotalk_wasm/: Cargo.toml  README.md
exotalk_engine/exotalk_wasm/src/: lib.rs
exotalk_engine/republet_desktop/: Cargo.toml  tauri.conf.json
exotalk_engine/republet_desktop/src/: main.rs
exotalk_engine/republet_ffi/: Cargo.toml
exotalk_engine/republet_ffi/src/: frb_generated.rs  lib.rs
exotalk_engine/republet_ffi/src/api/: mod.rs  network.rs  simple.rs  willow.rs
exotalk_engine/republet_schema/: Cargo.toml
exotalk_engine/scratch/: get_id.rs
exotalk_flutter/: README.md  analysis_output.txt  docker-compose.yml  final_analysis.txt  flutter_rust_bridge.yaml  prometheus.yml  pubspec.yaml
exotalk_web/: README.md  index.css  index.html
infra/: README.md  exotalk-conscia.service  exotalk-signaling.service  exotalk-zrok-conscia.service  exotalk-zrok.service  gcp_bootstrap.sh  minikube.service  setup_daemons.sh  signaling_server.py
infra/bridge_monitor/rust_builder/linux/: CMakeLists.txt
republet_desktop/: Cargo.toml
republet_flutter/: README.md
republet_lite/: README.md  flutter_rust_bridge.yaml  pubspec.yaml
republet_web/: README.md
(+278 files in other folders)
