[package]
name = "conscia"
version = "0.7.7"
license = "AGPL-3.0"
authors = ["ExoSystems Governance <federation@exonomy.local>"]
edition = "2021"

[dependencies]
exotalk_core = { path = "../exotalk_engine/exotalk_core" }
tokio = { version = "1.43.0", features = ["full", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
anyhow = "1.0.95"
once_cell = "1.21.4"
axum = "0.8.1"
tower-http = { version = "0.6.2", features = ["fs", "trace", "cors"] }
rust-embed = "8.6.0"
metrics-exporter-prometheus = "0.16.1"
tokio-stream = { version = "0.1.18", features = ["sync"] }
futures-util = "0.3.32"
tracing-core = "0.1.36"
chrono = "0.4.44"
clap = { version = "4.5.31", features = ["derive"] }
inquire = "0.7.5"
toml = "0.8.20"
dirs = "6.0.0"
rand = "0.8"
bs58 = "0.5"
ed25519-dalek = { version = "2", features = ["rand_core"] }

[package.metadata.deb]
maintainer = "ExoSystems Governance <federation@exonomy.local>"
copyright = "2026, ExoSystems Governance"
license-file = ["../LICENSE"]
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/conscia", "/usr/bin/conscia", "755"],
    ["conscia.service", "/lib/systemd/system/conscia.service", "644"]
]
