[package]
name = "exoauth_core"
version = "0.1.0"
edition = "2024"
[lib]
# 🧠 EDUCATIONAL CONTEXT:
# Flutter Rust Bridge (FRB) requires the native bindings to be compiled as a shared library (.so, .dylib, .dll) 
# for dynamic linking at runtime on Linux/Windows/Android/macOS, and as a static library (.a) for iOS.
# If omitted, Cargo defaults to `rlib`, causing the FFI to silently fail to bundle into the final app.
crate-type = ["cdylib", "staticlib"]
[dependencies]
base64 = "0.22.1"
bs58 = "0.5.1"
chrono = "0.4.44"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
flutter_rust_bridge = "=2.11.1"
futures-lite = "2.6.1"
once_cell = "1.21.4"
rand = "0.8"
rand_core = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["sync"] }
