# --- PURE SCHEMATICS ---
# This crate defines the strict Rust `struct` definitions for the Exonomy
# voucher wallet (Voucher, MintedOffer, ExchangeRequest). These data shapes
# are imported by exonomy_ffi but never by any other app's FFI bridge.

[package]
name = "exonomy_schema"
version = "0.1.0"
edition = "2024"

[dependencies]
