[package]
name = "exotalk_core"
version = "0.1.0"
edition = "2021"

[dependencies]
bs58 = "0.5.1"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
once_cell = "1.21.4"
rand = "0.10.0"
rand_core = "0.6.4"
iroh = "0.31.0"
iroh-blobs = "0.31.0"
willow25 = "0.4.0"
iroh-gossip = "0.31.0"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
anyhow = "1.0.95"
tracing = "0.1"
tracing-subscriber = "0.3.19"
base64 = "0.21"
futures-lite = "2.3"
serde_bytes = "0.11"
blake3 = "1.6"
metrics = "0.24"
iroh-metrics = "0.31.0"
chrono = "0.4.44"
