# --- PURE SCHEMATICS ---
# This crate exists to keep the engine domain-blind.
# It defines the strict Rust `struct` definitions (e.g., DirectMessage) 
# for ExoTalk, ensuring they are decoupled from the core networking logic.

[package]
name = "exotalk_schema"
version = "0.1.0"
edition = "2024"

[dependencies]
