[package]
name = "exotalk_wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console", 
    "Window", 
    "Document", 
    "Element", 
    "RtcPeerConnection", 
    "RtcConfiguration", 
    "RtcDataChannel",
    "RtcDataChannelInit",
    "RtcSdpType",
    "RtcSessionDescriptionInit",
    "RtcIceCandidateInit"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1.7"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
bs58 = "0.5"

[dev-dependencies]
wasm-bindgen-test = "0.3"
