# --- INDEPENDENT FFI BRIDGE ---
# This bridge is strictly isolated to RepubLet Lite. It takes the agnostic 
# networking engine (`exotalk_core`) and binds it uniquely to `republet_schema`.
# This guarantees that RepubLet mobile never compiles Chat/ExoTalk data models.

[package]
name = "republet_ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
exotalk_core = { path = "../exotalk_core" }
republet_schema = { path = "../republet_schema" }
flutter_rust_bridge = "=2.11.1"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
anyhow = "1.0.95"
tracing = "0.1"
tracing-subscriber = "0.3.19"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
bs58 = "0.5.1"
once_cell = "1.21.4"
rand_core = "0.6.4"
base64 = "0.21"
blake3 = "1.6"
futures-lite = "2.3"
serde_bytes = "0.11"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
